# webrust

./: .gitmodules  notes_planet_atmosphere  notes_planet_generation  notes_planet_rendering  notes_planet_shadows  notes_planet_texturing  notes_planet_ui  notes_planet_water  todo
appbase/: Cargo.toml  build.rs
appbase/src/: fileload.cpp  fileload.rs  fpswidget.rs  imgui_helper.rs  imgui_renderer.rs  lib.rs  localstorage.rs  webrunner.rs
array2d/: Cargo.toml
array2d/src/: lib.rs
emscripten_util/: Cargo.toml  build.rs
emscripten_util/src/: fileload.cpp  fileload.rs  imgdecode.cpp  imgdecode.rs  lib.rs  localstorage.rs
planetator/: Cargo.toml  _plan1  _plan2  _plan3  build.rs  build.sh  index.html  planet.json
planetator/src/: atmosphere.rs  culling.rs  fileloading_web.rs  guiutil.rs  main.rs  savegames.rs  shadowmap.rs
planetator/src/atmosphere/: functions.glsl.inc  interface.cc  mod.rs  model.cc  model.h
planetator/src/earth/: channels.rs  flycamera.rs  generator.rs  icosahedron_defs.rs  mod.rs  noise.rs  plate.rs  plateoptimizer.rs  renderer.rs  tree.rs  util.rs  water.rs
planetator/src/shaders/: default_colorator.glsl  default_generator.glsl  generator_normals.frag  generator_postvertex.frag  generator_vertices.frag  passthrough.vert  postprocess.frag  postprocess.vert  render_color.frag  render_color.vert  render_color_icosahedron.glsl  render_color_texture.glsl  render_plates.frag  render_plates.vert  render_water.frag  render_water.vert
tetris/: Cargo.toml  index.html  plan1
tetris-app/: Cargo.toml  action.php  build.sh  index.html  plan1
tetris-app/src/: client.rs  main.rs  renderer.rs
tetris-server/: Cargo.toml
tetris-server/src/: main.rs
tetris/src/: encrypt_25519.rs  game.rs  lib.rs  main.rs  networking.rs  piece.rs  replay.rs  stack.rs  state.rs
tetris/src/tetris/: game.rs  mod.rs  piece.rs  renderer.rs  replay.rs  stack.rs  state.rs
tinygl/: Cargo.toml
tinygl/src/: buffer.rs  fbo.rs  lib.rs  program.rs  shapes.rs  texture.rs  util.rs
util3d/: Cargo.toml
util3d/src/: flycamera.rs  lib.rs  noise.rs  noise_declarations.glsl.in  noise_definitions.glsl.in
webhelper/: Cargo.toml
webhelper/src/: imgui_helper.rs  lib.rs  tinygl.rs  util.rs  webrunner.rs
webutil/: Cargo.toml
webutil/src/: curve25519.rs  httpclient.rs  lib.rs
