[package]
name = "appbase"
version = "0.1.0"
authors = ["Wieland Hagen <wieland.hagen@kdab.com>"]

[dependencies]
base64 = "0.10.0"
cgmath = "^0"
gl = "0.10.0"
imgui = { version = "0.0.20", path = "../../imgui-rs" }
imgui-sdl2 = { version = "0.2.3", path = "../../imgui-sdl2" }
libc = "0.2"
sdl2 = "^0"
tinygl = { version = "^0", path = "../tinygl" }

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3.2"
