[package]
name = "appbase"
version = "0.1.0"
authors = ["Wieland Hagen <wieland.hagen@kdab.com>"]

[dependencies]
cgmath = "^0"
gl = "0.10.0"
imgui = "0.11.0"
imgui-sdl2 = "0.15.0"
sdl2 = "^0"
tinygl = { version = "^0", path = "../tinygl" }

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3.2"
