[package]
name = "planetator"
version = "0.1.0"
authors = ["Wieland Hagen <wieland.hagen@kdab.com>"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
ncremental = false
overflow-checks = false

[dependencies]
sdl2 = "^0"
gl = "^0"
cgmath = "0.16.1"
lru-cache = "0.1.1"
imgui = { version = "0.0.20", path = "../../imgui-rs" }
imgui-sdl2 = { version = "0.2.3", path = "../../imgui-sdl2" }
webhelper = { version = "0.1.0", path = "../webhelper" }
base64 = "0.10.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3.2"
