[package]
name = "planetator"
version = "0.1.0"
authors = ["Wieland Hagen <wieland.hagen@kdab.com>"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
ncremental = false
overflow-checks = false

[dependencies]
array2d = { version = "^0", path = "../array2d" }
appbase = { version = "^0", path = "../appbase" }
base64 = "0.10.0"
bincode = "~1.0.0"
cgmath = "^0"
gl = "0.10.0"
imgui = { version = "0.0.20", path = "../imgui-rs" }
imgui-sys = { version = "0.0.20", path = "../imgui-rs/imgui-sys" }
lru-cache = "0.1.1"
rand = "^0.6"
sdl2 = "^0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tinygl = { version = "^0", path = "../tinygl" }
util3d = { version = "0.1.0", path = "../util3d" }
webutil = { version = "0.1.0", path = "../webutil" }

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3.2"
emscripten-util = { version = "^0", path = "../emscripten_util" }

[build-dependencies]
cc = "1.0"
