[package]
name = "tetris-app"
version = "0.1.0"
authors = ["Wieland Hagen <wieland.hagen@kdab.com>"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
ncremental = false
overflow-checks = false

[dependencies]
appbase = { version = "^0", path = "../appbase" }
tetris = { version = "^0", path = "../tetris" }
tinygl = { version = "^0", path = "../tinygl" }
rand = "^0.6"
sdl2 = "^0"
gl = "0.10.0"
cgmath = "0.16.1"
imgui = { version = "0.0.20", path = "../../imgui-rs" }

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3.2"
