[package]
name = "tetris-app"
version = "0.1.0"
authors = ["Wieland Hagen <wieland.hagen@kdab.com>"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
ncremental = false
overflow-checks = false

[dependencies]
appbase = { version = "^0", path = "../appbase" }
base64 = "0.10.0"
bincode = "1.0"
cgmath = "0.16.1"
gl = "0.10.0"
imgui = { version = "0.0.20", path = "../../imgui-rs" }
rand = "^0.6"
sdl2 = "^0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tetris = { version = "^0", path = "../tetris" }
tinygl = { version = "^0", path = "../tinygl" }
webutil = { version = "^0", path = "../webutil" }

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3.2"
