[package]
name = "webutil"
version = "0.1.0"
authors = ["Wieland Hagen <wieland.hagen@kdab.com>"]

[dependencies]
rust-crypto = "0.2.36"
rand = "^0.6"

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3.2"

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
curl = "0.4.19"